# HW_WEB_13

./: main.py  pyproject.toml
migrations/versions/: 099fd340f05d_init.py  21421c93a05e_new_init.py
src/conf/: config.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  email.py
