[tool.poetry]
name = "hw-web-13"
version = "0.1.0"
description = ""
authors = ["ArtemZhuravlev <Utah954@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^69.0.3"
fastapi = "^0.109.2"
uvicorn = {extras = ["standart"], version = "^0.27.1"}
pydantic = {extras = ["email"], version = "^2.6.1"}
python-multipart = "^0.0.7"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
libgravatar = "^1.0.4"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
sqlalchemy = "^2.0.25"
fastapi-mail = "^1.4.1"
python-dotenv = "^1.0.1"
redis = "^5.0.1"
fastapi-limiter = "^0.1.6"
cloudinary = "^1.38.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
greenlet = "^3.0.3"
poetry = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
